# pendulums

./: .gitignore  README.md  num_integration_methods.py  pyproject.toml
legacy/: README.md  main.py  make_video.py  models.py  num_integration_methods.py  user_interaction.py
src/pendulums/: __init__.py  cli.py  physics.py  render.py  simulate.py
